--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
     <a href="{{ site.url }}" class="top-link">{{ site.name }}</a>
       <ul class="nav">
         <!--Change the  URL here if working on an absolute domain-->
-        <li><a href="adarsh0112.github.io">Home</a></li>
-        <li><a href="adarsh0112.github.io/about">About</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="/about">About</a></li>
         {% if site.owner.github %}
           <li><a href="{{ site.owner.github }}" target="_blank">Projects</a></li>
         {% endif %}
