--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <div class="header-container container">
   <header>
-    <a href="{{ site.url }}" class="top-link">{{ site.name }}</a>
+    <a href="adarsh0112.github.io" class="top-link">{{ site.name }}</a>
       <ul class="nav">
         <!--Change the  URL here if working on an absolute domain-->
-        <li><a href="{{ site.url }}">Home</a></li>
+        <li><a href="{{ site.url }}/">Home</a></li>
         <li><a href="{{ site.url }}/about">About</a></li>
         {% if site.owner.github %}
           <li><a href="{{ site.owner.github }}" target="_blank">Projects</a></li>
