--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <hr />
   <div class="footer-link">
     {% if site.author.facebook %}
-    <a href="https://www.facebook.com/{{ site.author.facebook }}"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+    <a href="https://www.facebook.com/{{ site.author.facebook }}"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
     {% endif %}
 	
 	{% if site.author.youtubeUser %}
@@ -31,7 +31,7 @@
     {% endif %}
 
     {% if site.author.linkedin %}
-    <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+    <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
     {% endif %}
 	
 	{% if site.author.pinterest %}
