removed copyright and revert gh new icon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
     {% endif %}
 
     {% if site.author.github %}
-    <a href="https://github.com/{{ site.author.github }}"><i class="fab fa-github-alt" aria-hidden="true"></i></a>
+    <a href="https://github.com/{{ site.author.github }}"><i class="fab fa-github" aria-hidden="true"></i></a>
     {% endif %}
 	
 	{% if site.author.stackoverflow %}
@@ -67,5 +67,4 @@
     {% endif %}
 
   </div>
-  © {{ site.copyright.year }} {{ site.copyright.name }}. All rights reserved.
 </div>
